Desabilitado modelo para mobile

--- a/Web.config
+++ b/Web.config
@@ -65,6 +65,12 @@
           connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
+    <browserCaps>
+      <result type="System.Web.Mobile.MobileCapabilities,
+          System.Web.Mobile, Version=2.0.0.0, Culture=neutral, 
+          PublicKeyToken=b03f5f7f11d50a3a"/>
+      <filter>isMobileDevice=false</filter>
+    </browserCaps>
   </system.web>
   <system.webServer>
     <modules>
@@ -123,4 +129,5 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
 </configuration>
