acrescentado al´´ogica de adicionar itens a partir da busca

--- a/Web.config
+++ b/Web.config
@@ -65,12 +65,12 @@
           connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
-    <browserCaps>
+    <!--<browserCaps>
       <result type="System.Web.Mobile.MobileCapabilities,
           System.Web.Mobile, Version=2.0.0.0, Culture=neutral, 
           PublicKeyToken=b03f5f7f11d50a3a"/>
       <filter>isMobileDevice=false</filter>
-    </browserCaps>
+    </browserCaps>-->
   </system.web>
   <system.webServer>
     <modules>
